tests/baselines/reference/blockScopedFunctionDeclarationES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
blockScopedFunctionDeclarationES5.ts(2,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
blockScopedFunctionDeclarationES5.ts(5,1): error TS2304: Cannot find name 'foo'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== blockScopedFunctionDeclarationES5.ts (2 errors) ====
    if (true) {
        function foo() { }
                 ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        foo();
    }
    foo();
    ~~~
!!! error TS2304: Cannot find name 'foo'.